--- a/Simulator.html
+++ b/Simulator.html
@@ -33,7 +33,7 @@
         Start adding members to see how it works.
       </p>
     </div>
-    <div id="body" class="gis_main gis_wrapper">
+    <div id="gis_body" class="gis_main gis_wrapper">
       <div id="gis_canvas_div">
         <div style="width:100%; height: 100%; position: absolute;" id="gis_label_div">
         </div>
@@ -1605,7 +1605,7 @@
     }
   </script>
   <script type="text/javascript">
-    let body = document.getElementById("body")
+    let body = document.getElementById("gis_body")
     String.prototype.hashCode = function () {
       var hash = 0,
         i, chr;
@@ -2298,7 +2298,7 @@ void main(void) {
         options_div.style.display = "block"
         options_div.innerHTML = html;
         options_div.style.top = (mouse_page_position[1] - canvas_div.offsetTop) + "px";
-        options_div.style.left = (mouse_page_position[0] - options_div.offsetWidth / 2.) + "px";
+        options_div.style.left = (mouse_page_position[0] - options_div.offsetWidth / 2.-body.offsetLeft) + "px";
       }
       window.hide_option = () => {
         options_div.style.display = "none"
