Minor UI update / removed spacing above graph.

--- a/Simulator.html
+++ b/Simulator.html
@@ -17,7 +17,7 @@
       </div>
       <button class="gis_logo_button button" onclick="clear_all()">Reset</button>
     </header>
-    <div class="gis_banners">
+    <div id="gis_body" class="gis_main gis_wrapper gis_banners">
       <label id="gis_lock_message" style="visibility:hidden; height:1em; border:none; color: #f70">Distribution
         Locked</Label>
       <p class="gis_instruction" id="load_message">
@@ -32,8 +32,6 @@
         <br>
         Start adding members to see how it works.
       </p>
-    </div>
-    <div id="gis_body" class="gis_main gis_wrapper">
       <div id="gis_canvas_div">
         <div style="width:100%; height: 100%; position: absolute;" id="gis_label_div">
         </div>
